修改文章内容

--- a/source/_posts/测试、测试开发与质量保障.md
+++ b/source/_posts/测试、测试开发与质量保障.md
@@ -52,7 +52,7 @@ service LoginService {
 
 后续SWE就需要根据上述协议进行代码开发、单元测试；同时SET开始编写自动化运行程序。待SWE前后端调试结束后，执行自动化测试程序。等到单元测试和自动化测试都通过之后，提交代码审查。若代码审查结果需要修改，则重新执行前面的步骤，至代码审查通过。
 
-至此，一个登录模块就已经开发完毕了。可以看到TE并没有参与到研发过程中。当TE介入时，整个产品已经有了商品模块、购物车模块、订单模块。SWE和SET已经在测试技术和质量方面做了大量工作。TE们介入后通常考虑以下问题：
+至此，一个登录模块就已经开发完毕了。**可以看到TE并没有参与到研发过程中**。当TE介入时，整个产品已经有了商品模块、购物车模块、订单模块。SWE和SET已经在测试技术和质量方面做了大量工作。TE们介入后通常考虑以下问题：
 
 - 当前软件薄弱点在哪里？
 
@@ -64,7 +64,7 @@ service LoginService {
 
 TE需要在测试计划及测试完整性上需要更加系统和周密，重点在真实用户的使用方式和系统级别的体验上。
 
-并非所有的产品都需要TE介入。试验性工作、目标尚不明确或用户故事处于早期的产品，TE很少甚至不参与。即使是一个明确要发布的产品，在研发的早期阶段，最终功能列表和范畴还没有确定。TE通常没有太多的工作可以做。过早的投入TE意味着资源的浪费，尤其是SET已经深度介入的时候。
+并非所有的产品都需要TE介入。试验性工作、目标尚不明确或用户故事处于早期的产品，TE很少甚至不参与;即使是一个明确要发布的产品，在研发的早期阶段，最终功能列表和范畴还没有确定,TE通常也没有太多的工作可以做。过早的投入TE意味着资源的浪费，尤其是SET已经深度介入的时候。
 
 ##### 小结：
 
@@ -87,4 +87,7 @@ TE需要在测试计划及测试完整性上需要更加系统和周密，重点
 #### PartIII 总结
 Google中的研发逻辑要求有完备的基础设施建设。例如他们共享所有代码库，所有人都可以往代码库提交代码（只要通过审查）因此有大量的工具保证质量工作；他们每周可以有20%做探索式工作，很多产品、工具往往在这20%时间里诞生；完备的代码审查机制。
 
-而在我们的研发流程中，测试人员更多忙于功能保障。当然现在逐渐的，测试开发开始在产研过程中占据一部分重要的工作。也许当功能越来越稳定之时，测试开发会在质量保障工作中占据绝大部分的工作，只需要留下部分保障功能测试人员即可。
+而对于机制相对不完善的中小企业来说，保障功能快速上线是主要矛盾。能够在日常迭代任务的间隙，做好测试资产、技术沉淀是次要矛盾。因而大量的测试人员投入在了功能保障环节。但是，随着产品功能的膨胀、系统复杂度的提高，单纯的功能测试已经不满足需求，
+继而出现了测试开发人员。测试开发应从熟悉当前工作流中痛点的功能测试人员转换。他们应该熟悉被测系统，熟悉工作中哪些内容可以使用技术手段解决。就这个角度来看，对于我们个人来说要在完成日常工作的同时，注重自己的技术水平提升，同时关注业界时下正在讨论的问题，多实践多思考。
+
+展望未来，相信我们的产研体系会越来越成熟。测试开发会在质量保障工作中占据绝大部份工作，功能测试工作也会越来越简约。通过技术手段解决重复、复杂的工作，同时将测试结果反馈研发端，提升整体产研效率。
